properties파을 정보 읽어서 Map<String , Action>으로 저장 예제